# pySCENIC

./: .gitignore  README.rst  noxfile.py  output.yaml  pyproject.toml  ruff.toml  ty.toml
scripts/: hpc-prune.py
src/pyscenic/: __init__.py  _version.py  aucell.py  binarization.py  constants.py  export.py  featureseq.py  log.py  math.py  plotting.py  prune.py  rss.py  transform.py  utils.py
src/pyscenic/cli/: arboreto_with_multiprocessing.py  pyscenic.py  utils.py
